<resources>
    <string name="app_name">Entrega1</string>
    <string name="textview">TextView</string>
    <string name="precio">Precio :</string>
    <string name="fecha_de_salida">Fecha de Salida:</string>
    <string name="fecha_de_llegada">Fecha de llegada:</string>
    <string name="lugar_de_salida">Lugar de salida:</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="viaje_imagen">Viaje imagen</string>
    <string name="fecha_de_inicio">Fecha de Inicio:</string>
    <string name="fecha_de_fin">Fecha de fin:</string>
    <string name="save_filter">Save Filter</string>
    <string name="precio_max">Precio max:</string>
    <string name="precio_min">Precio min:</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="columnas">Columnas</string>
    <string name="descripci_n">Descripción:</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_register_text">Pulse aqui para registrarse</string>
    <string name="login_button_google_text">Acceder con google</string>
    <string name="login_email_error_1">El correo electrónico no puede estar vacío</string>
    <string name="login_mail_error_2">La contraseña no puede estar vacío</string>
    <string name="login_email_access_error">Se ha producido un error al acceso</string>
    <string name="login_verified_mail_error">Aún no has validado su cuenta. ¿Quiere que le enviemos un correo electrónico de verificación?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_email_error_sent">Te hemos enviado el correo</string>
    <string name="login_verified_email_error_no_sent">No se ha podido enviar el correo</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_service_error">Debe actualizar Google Play Service antes de continuar</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">733580265979-qitde738dhvr5uqmks2577dum181kac8.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introducir de nuevo la contraseña</string>
    <string name="login_button_signup_text">Registar usuario</string>
    <string name="signup_error_user">El correo no es valido</string>
    <string name="signup_error_pass">La contraseña no es valida</string>
    <string name="signup_error_match_pass">Las contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_not_created">Se ha producido un error al registrar el nuevo usuario</string>
    <string name="logout_error">Se produjo un error durante la desconexión.</string>
    <string name="logout_success">"Has sido desconectado "</string>
    <string name="crear_viaje">Crear viaje</string>
    <string name="creaci_n_de_viajes">Creación de viajes</string>
    <string name="destino">Destino</string>
    <string name="lugar_de_salida_form">Lugar de salida</string>
    <string name="nombre_form_error">Se debe indicar el destino</string>
    <string name="lugarSalida_form_error">Se debe indicar el lugar de salida</string>
    <string name="precio_form_error">Se debe indicar el precio del viaje</string>
    <string name="description_form_error">Se debe indicar la descripción del viaje</string>
    <string name="fechaInicio_form_error">Se debe indicar una fecha de inicio</string>
    <string name="fechaFin_form_error">Se debe indicar una fecha de fin</string>
    <string name="take_picture">Cambiar imagen</string>
    <string name="take_picture_camera_rationale">Nececitamos acceso a tu camara</string>
    <string name="take_picture_camera_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No esta posible usar esta funcion sin camara</string>
    <string name="storage_not_granted">No se puede Almacenar la foto</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="p_gina_de_perfil">Página de perfil</string>
    <string name="location_rationale">Necesitamos tu localizacion para esta funcionalidad</string>
    <string name="location_rationale_ok">Ok</string>
    <string name="location_cancel">Permision importante para la app</string>
    <string name="latitud_del_punto_de_salida">Latitud del punto de salida</string>
    <string name="longitud_del_punto_de_salida">Longitud del punto de salida</string>
    <string name="latitude_required">Se debe indicar la latitud</string>
    <string name="latitude_invalid">La latitud debe estar entre 90 y -90 no incluido</string>
    <string name="longitude_required">Se debe indicar la longitud</string>
    <string name="distancia_con_mi_posici_n">Distancia con mi posición</string>
    <string name="longitude_invalid">La longitud debe estar entre -180 y 180 no incluido</string>
    <string name="open_weather_map_api_key">4a73877fd14db76d289ccec1e1e1bf9b</string>
    <string name="ciudad">Ciudad</string>
    <string name="weather">Weather</string>
    <string name="temperatura">Temperatura</string>
</resources>
