<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FirebaseStorageProfileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/p_gina_de_perfil"/>

    <ImageView
        android:id="@+id/take_picture_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_person_black"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/take_picture_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_button"
        android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
        android:text="@string/take_picture"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
        android:layout_width="match_parent"
        android:id="@+id/email_profile"
        android:layout_height="wrap_content"
        android:text="@string/correo_electr_nico"/>

    </LinearLayout>


</LinearLayout>