<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateViajeActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/creaci_n_de_viajes"
        android:textColor="@color/Brown"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/create_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/create_trip_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombre_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/nombre_trip_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destino"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lugar_salida_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/lugar_salida_trip_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lugar_de_salida"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/precio_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/precio_trip_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/precio"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/description_trip_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n"
                    android:inputType="textMultiLine"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fechaInicio_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/textView_fechaInicio_form"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="none"
                        android:hint="@string/fecha_de_inicio"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="setFechaInicioForm"
                    app:srcCompat="@drawable/ic_event_brown_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fechaFin_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/textView_fechaFin_form"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="none"
                        android:hint="@string/fecha_de_fin"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="setFechaFinForm"
                    app:srcCompat="@drawable/ic_event_brown_24dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/Brown"
                android:onClick="attemptCreateTrip"
                android:text="@string/crear_viaje"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>